fix firefox scrollbars

--- a/ui/src/index.scss
+++ b/ui/src/index.scss
@@ -13,16 +13,24 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 */
-*::-webkit-scrollbar {
-  width: 6px;
-}
+* {
+  // For Firefox
+  scrollbar-width: thin;
+  scrollbar-color: var(--text2) var(--text0);
 
-*::-webkit-scrollbar-track {
-  background: var(--text0);
-}
-*::-webkit-scrollbar-thumb {
-  background-color: var(--text2);
-  border-radius: 6px;
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--text2);
+    border-radius: 12px;
+    border: 3px solid var(--card8);
+  }
+
+  &::-webkit-scrollbar {
+    width: 12px;
+  }
+  
+  &::-webkit-scrollbar-track {
+    background: var(--text0);
+  }
 }
 
 body {
